--- a/posts/00-Welcome.qmd
+++ b/posts/00-Welcome.qmd
@@ -22,7 +22,7 @@ Welcome to IS38! Couple of important notes as you get started:
 
 * For private communications, you can either send private Slack messages or email me at [`r instructor_email`](mailto:`r paste0(instructor_email, '?subject=', course)`).
 
-* Complete the self-regulated learning assessment in DAACS. Visit [cuny.daacs.net](https://cuny.daacs.net) and sign-in using your CUNY acocunt.
+* Complete the self-regulated learning assessment in DAACS. Visit [cuny.daacs.net](https://cuny.daacs.net) and sign-in using your CUNY account.
 
 * Our Meetups will be on `r class_day` from `r class_time`. **I expect everyone to attend or watch the Meetups.** Important information will be shared during the meetups that will not be available in any other format.
 
