--- a/common/academic_integrity.qmd
+++ b/common/academic_integrity.qmd
@@ -1,3 +1,4 @@
 ### ACADEMIC INTEGRITY
 
-Academic dishonesty is unacceptable and will not be tolerated. Cheating, forgery, plagiarism and collusion in dishonest acts undermine the educational mission of the City University of New York and the students' personal and intellectual growth. Please see: Academic Integrity on the CUNY SPS Website.
+Academic dishonesty is unacceptable and will not be tolerated. Cheating, forgery, plagiarism and collusion in dishonest acts undermine the educational mission of the City University of New York and the students' personal and intellectual growth. Please see: [Academic Integrity on the CUNY SPS Website](https://sps.cuny.edu/about/policies/academic-and-student-policies/academic-integrity).
+
