--- a/posts/01-Introduction_to_R_and_RStudio.qmd
+++ b/posts/01-Introduction_to_R_and_RStudio.qmd
@@ -8,9 +8,9 @@ image: "01-Introduction_to_R_and_RStudio.png"
 ---
 
 
-[Click here](/slides/00-Intro_to_Course.html.html#1) to open the slides([PDF](/slides/00-Intro_to_Course.html.pdf)).
+[Click here](/slides/00-Intro_to_Course.html#1) to open the slides.
 
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/iqWZs7QrT9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
